--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,16 @@
-appnope==0.1.0
-asn1crypto==0.24.0
-backports-abc==0.5
-backports.shutil-get-terminal-size==1.0.0
-bleach==3.0.2
 certifi==2018.11.29
-cffi==1.11.5
 chardet==3.0.4
 Click==7.0
-configparser==3.5.0
-cryptography==2.4.2
-decorator==4.3.0
-defusedxml==0.5.0
-entrypoints==0.2.3
-enum34==1.1.6
 Flask==1.0.2
-functools32==3.2.3.post2
-futures==3.2.0
 idna==2.8
-ipaddress==1.0.22
-ipykernel==4.10.0
-ipython==5.8.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
 itsdangerous==1.1.0
 Jinja2==2.10
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.4
-jupyter-console==5.2.0
-jupyter-core==4.4.0
 MarkupSafe==1.1.0
-mistune==0.8.4
-nbconvert==5.4.0
-nbformat==4.4.0
-notebook==5.7.4
-pandocfilters==1.4.2
-pathlib2==2.3.3
-pexpect==4.6.0
-pickleshare==0.7.5
-prometheus-client==0.5.0
-prompt-toolkit==1.0.15
-ptyprocess==0.6.0
-pycparser==2.19
-Pygments==2.3.1
 PyJWT==1.7.1
-pyOpenSSL==18.0.0
-python-dateutil==2.7.5
+PySocks==1.6.8
 pytz==2018.7
-pyzmq==17.1.2
-qtconsole==4.4.3
 requests==2.21.0
-scandir==1.9.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
 six==1.12.0
-terminado==0.8.1
-testpath==0.4.2
-tornado==5.1.1
-traitlets==4.3.2
 twilio==6.22.0
 urllib3==1.24.1
-wcwidth==0.1.7
-webencodings==0.5.1
 Werkzeug==0.14.1
-widgetsnbextension==3.4.2
